2003-03-03  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (text_len): change passed string instead of
	text->text, update all callers, fixes #38964

2003-03-02  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (html_engine_thaw_idle_flush): change idle_reset to
	idle_flush so that we always thaw the changes.

2003-02-28  Larry Ewing  <lewing@ximian.com>

	* htmlimage.c (html_image_resolve_image_url): fix the GValue usage.

	* htmlclueflow.c (copy): actually commit the copy fix.

	* htmlengine.c: turn off debug log that accidenetally got turned on.

	* gtkhtml.c (gtk_html_api_set_language): change assertion to check.

2003-02-27  Larry Ewing  <lewing@ximian.com>

	* htmlclueflow.c (end_of_word): make sure we check for the end of
	the buffer.

	* htmltokenizer.c (add_unichar_validated): new helper function to
	checkvalidity of unichar before adding it to the stream.
	(in_entity): use add_unichar_validated here to make sure that
	invalid entity references don't corrupt the utf8 stream.

2003-02-27  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (text_len): replace invalid utf8 with [?]

	* htmltokenizer.c (in_entity): extend the max length of number to
	10 digits (0xffffffff = 4294967295)

	* htmltext.c (forward_get_nb_width): reverse prev/next to avoid
	infinite loops in broken html documents (where empty text objects
	are created)

2003-02-25  Larry Ewing  <lewing@ximian.com>

	* htmlpainter.c: remove h_utf8*

	* htmltext.c: same.

	* htmltextslave.c: same.

2003-02-24  Larry Ewing  <lewing@ximian.com>

	* htmlgdkpainter.c (draw_pixmap): remove helper function.

	* gtkhtml.c: add a couple more properties.

	* htmlclueflow.c (relayout): add engine offsets to the draw call.

2003-02-24  Radek Doulik  <rodo@ximian.com>

	* gtkhtml-properties.c (gtk_html_class_properties_new): don't free
	fixed_name, it's stored in p

	* gtkhtml.c: don't use keybindings_theme, hardcode keybindings as
	gtk does (they could be changed in gtkrc file)
