@@ -1,5 +1,9 @@
 2003-03-03  Radek Doulik  <rodo@ximian.com>
 
+	* htmltextslave.c (draw_spell_errors): use items cache
+
+	* htmlgdkpainter.c (draw_spell_error): fixed spell errors drawing
+
 	* htmltext.c (text_len): change passed string instead of
 	text->text, update all callers, fixes #38964
 
